# dspy-examples

./: .gitignore  README.md  bandit_ctf_solver.py  git_version_security_evaluator.py  pyproject.toml  security_eval_agent.py
datasets/: security_evaluated_dataset.jsonl
dspy_examples/: bugcrowd_blog.ipynb  flow.mmd  judge.py  minimum_inputs.json  models.py  small_inputs.json  target.py
dspy_examples/notebooks/: 1signatures.ipynb  2modules.multi-hop-search.ipynb  4.optimization.ipynb
examples/: attack.ipynb  demo.ipynb  judge.py  logger.py  models.py  small.json  trace_advanced.py
notebooks/: 2modules.ipynb  3.evaluations.ipynb  basics.ipynb
